# git-auto-commit

./: .gitignore  CLAUDE.md  Cargo.toml  LICENCE  Makefile  README.md  clippy.toml
.github/workflows/: ci.yml
src/: changeset.rs  claude.rs  cli.rs  constants.rs  context.rs  git.rs  main.rs  ui.rs
src/git/: tests.rs
tests/: no_todos.rs
