[package]
name = "git-auto-commit"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
anyhow = "1.0"
colored = "3.0.0"
crossterm = "0.29.0"
git2 = { version = "0.20.2", features = ["vendored-libgit2"] }
indicatif = "0.18.2"
rustyline = "17.0.2"
shlex = "1.3.0"
tempfile = "3.23.0"
wait-timeout = "0.2.1"

[profile.release]
strip = true
debug = false
lto = true
codegen-units = 1
panic = "abort"
