[package]
name = "git-auto-commit"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.29.0"
dirs = "6.0"
git2 = { version = "0.20.2", features = ["vendored-libgit2"] }
indicatif = "0.18.2"
num-format = "0.4.4"
rustyline = "17.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
shlex = "1.3.0"
tempfile = "3.23.0"
ureq = { version = "3.0", features = ["json"] }
wait-timeout = "0.2.1"

[profile.release]
strip = true
debug = false
lto = true
codegen-units = 1
panic = "abort"
